<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLocation"
        android:hint="@string/find_location_hint"
        android:textColorHint="@color/colorLightGrey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etLocationName"
        android:hint="@string/location_name_hint"
        android:textColorHint="@color/colorLightGrey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/etLocation"
        app:layout_constraintStart_toStartOf="@+id/etLocation"
        app:layout_constraintTop_toBottomOf="@+id/etLocation" />

    <Button
        android:id="@+id/btnFindByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/find_by_text"
        app:layout_constraintEnd_toEndOf="@+id/etLocation"
        app:layout_constraintTop_toBottomOf="@+id/etLocationName" />

    <Button
        android:id="@+id/btnFindByMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:enabled="false"
        android:text="@string/find_by_map"
        app:layout_constraintEnd_toEndOf="@+id/btnFindByText"
        app:layout_constraintStart_toStartOf="@+id/btnFindByText"
        app:layout_constraintTop_toBottomOf="@+id/btnFindByText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/etLocation"
        app:layout_constraintStart_toStartOf="@+id/etLocation"
        app:layout_constraintTop_toBottomOf="@+id/btnFindByMap">

        <ImageView
            android:id="@+id/imgError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvError"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvError"
            app:srcCompat="@drawable/ic__error_outline_red" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/error_wrong_name"
            android:textColor="@color/colorLightRed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgError"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>